Initial email features (no scheduling)

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "admin-lte": "^3.0.1",
         "datatables.net": "^1.10.20",
         "datatables.net-bs4": "^1.10.20",
+        "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
         "select2": "^4.0.12",
         "underscore": "^1.9.1"
