--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "datatables.net-bs4": "^1.10.20",
         "flatpickr": "^4.6.3",
         "font-awesome": "^4.7.0",
+        "overlayscrollbars": "^1.10.0",
         "select2": "^4.0.12",
         "underscore": "^1.9.1"
     }
